# kmeans

./: .gitignore  CMakeLists.txt  Data.h  Outline.txt  kmeans.h  main.cpp  mnist_loader.cpp  mnist_loader.h
